--- a/upcomig events.html
+++ b/upcomig events.html
@@ -9,51 +9,73 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"><img src="./assets/images/Logo Amazing Events.png" alt="logo" width="140" height="60"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item text-center">
-              <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="#">Upcoming Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="./past events.html">Past Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="./contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="./stats.html">Stats</a>
-            </li>
-          </ul>
+  <div id="app-vue">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./index.html"><img src="./assets/images/Logo Amazing Events.png" alt="logo" width="140" height="60"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item text-center">
+                <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="#">Upcoming Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="./past events.html">Past Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="./contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-sm btn-outline-secondary m-2" href="./stats.html">Stats</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
     <section class="fondoTitulo">
       <h1 class="d-flex justify-content-center p-4 m-0 ">UPCOMING EVENTS</h1>
     </section>
     <main class="fondoMenu">
       <div class="d-flex input-group align-items-center p-2 justify-content-around" role="search">
-        <div id="checkBox">
+
+        <div><!-- seccion caja checkeado  -->
+          <label v-if="cajaCheckeo" v-for="categoria of cajaCheckeo" class="form-check form-check-inline">
+            <input class="form-check-input" @change="filtroCruzado" v-model="entradaChekeado" type="checkbox" :value="categoria">
+            {{categoria}}</label>
         </div>
+        
         <div class="d-flex">
-          <input class="form-control me-2" id="buscar" type="search" placeholder="Search" aria-label="Search">
+          <input class="form-control me-2" @input="filtroCruzado" v-model="entradaDeBusqueda" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success p-1 d-flex align-items-center bg-dark" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
           </svg></button>
         </div>
       </div>
-          <div class="row w-100 justify-content-around p-2 m-0 " id="cardsUpcoming"><!-- seccion cards  -->
+
+          <div class="row w-100 justify-content-around p-2 m-0 "><!-- seccion eventos futuros -->
+            <div v-if="imprimirEventos" v-for="evento of imprimirEventos" class="card col-6 mb-3 p-1" style="width: 12rem;">
+              <img :src="evento.image" class="card-img-top" :alt="evento.name">
+              <div class="card-body p-0 text-center d-flex flex-column justify-content-between">
+                <div>
+                  <h5 class="card-title m-0 pt-2">{{evento.name}}</h5>
+                  <p class="card-text m-0 pt-2 pb-2">{{evento.description}}</p>
+                </div>
+                <div class="d-flex justify-content-around align-items-center">
+                  <p class="m-0">Price ${{evento.price}}</p>
+                  <a :href="'./details.html?id=' + evento._id" class="btn btn-primary p-1">See more</a>
+                </div>
+              </div>
+            </div>
+            <div v-else class="text-center mt-4">No Matches Found</div>
           </div>
+
     </main> 
     <footer class="d-flex justify-content-between align-items-center navbar-dark bg-dark ">
       <div class="iconos d-flex align-items-center justify-content-around mt-2 mb-2 ">
@@ -75,7 +97,9 @@
       </div>
       <h4 class="iconos">COHORT</h4>
     </footer>
-    <script src="./assets/javascript/upcoming.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="./assets/javascript/invue.js"></script>
 </body>
 </html>
