commit medium stats

--- a/upcomig events.html
+++ b/upcomig events.html
@@ -58,7 +58,6 @@
           </svg></button>
         </div>
       </div>
-
           <div class="row w-100 justify-content-around p-2 m-0 "><!-- seccion eventos futuros -->
             <div v-if="imprimirEventos" v-for="evento of imprimirEventos" class="card col-6 mb-3 p-1" style="width: 12rem;">
               <img :src="evento.image" class="card-img-top" :alt="evento.name">
@@ -73,9 +72,8 @@
                 </div>
               </div>
             </div>
-            <div v-else class="text-center mt-4">No Matches Found</div>
+            <div v-show="imprimirEventos.length===0" class="text-center fs-1">No matches, please change filters</div>
           </div>
-
     </main> 
     <footer class="d-flex justify-content-between align-items-center navbar-dark bg-dark ">
       <div class="iconos d-flex align-items-center justify-content-around mt-2 mb-2 ">
