--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </div>
             </div>
             <div class="row w-100 justify-content-around p-2 m-0 "><!-- seccion todos los eventos  -->
-              <div v-if="imprimirEventos" v-for="evento of imprimirEventos" class="card col-6 mb-3 p-1" style="width: 12rem;">
+              <div v-for="evento of imprimirEventos" class="card col-6 mb-3 p-1" style="width: 12rem;">
                 <img :src="evento.image" class="card-img-top" :alt="evento.name">
                 <div class="card-body p-0 text-center d-flex flex-column justify-content-between">
                   <div>
@@ -70,10 +70,8 @@
                   </div>
                 </div>
               </div>
-              <template v-else>
-                <h3  class="text-center mt-4">No Matches Found</h3>
-              </template>
             </div>
+            <div v-show="imprimirEventos.length===0" class="text-center fs-1">No matches, please change filters</div>
       </main> 
       <footer class="d-flex justify-content-between align-items-center navbar-dark bg-dark ">
         <div class="iconos d-flex align-items-center justify-content-around mt-2 mb-2 ">
