--- a/past events.html
+++ b/past events.html
@@ -44,7 +44,6 @@
       </section>
       <main class="fondoMenu">
         <div class="d-flex input-group align-items-center p-2 justify-content-around" role="search">
-
           <div><!-- seccion caja checkeado  -->
             <label v-if="cajaCheckeo" v-for="categoria of cajaCheckeo" class="form-check form-check-inline">
               <input class="form-check-input" @change="filtroCruzado" v-model="entradaChekeado" type="checkbox" :value="categoria">
@@ -58,7 +57,6 @@
             </svg></button>
           </div>
         </div>
-
             <div class="row w-100 justify-content-around p-2 m-0 "><!-- seccion eventos pasados  -->
               <div v-if="imprimirEventos" v-for="evento of imprimirEventos" class="card col-6 mb-3 p-1" style="width: 12rem;">
                 <img :src="evento.image" class="card-img-top" :alt="evento.name">
@@ -73,9 +71,8 @@
                   </div>
                 </div>
               </div>
-              <div v-else class="text-center mt-4">No Matches Found</div>
+              <div v-show="imprimirEventos.length===0" class="text-center fs-1">No matches, please change filters</div>
             </div>
-
       </main> 
       <footer class="d-flex justify-content-between align-items-center navbar-dark bg-dark ">
         <div class="iconos d-flex align-items-center justify-content-around mt-2 mb-2 ">
