--- a/stats.html
+++ b/stats.html
@@ -45,7 +45,7 @@
       <main class="d-flex justify-content-center fondoMenu">
           <div class="pt-4">
             <table class="mb-4 table table-dark table-bordered border-primary text-info ">
-              <tbody id="eventosEstaticos"><!-- seccion uno de tabla -->
+              <tbody><!-- seccion uno de tabla -->
                   <tr>
                     <td colspan="3"><h4>Events statistics</h4></td>
                   </tr>
@@ -54,15 +54,15 @@
                     <td>Events whilth the lowest percentage of attendance</td>
                     <td>Event with larger capacity</td>
                   </tr>
-                  <tr class="table-active color_td">
+                  <tr v-if="eventosCalculados.length!==0" class="table-active color_td">
                     <td>{{eventosCalculados.mayorPorcentaje}}</td>
-                    <td>{{eventosCalculados.mayorPorcentaje}}</td>
+                    <td>{{eventosCalculados.menorPorcentaje}}</td>
                     <td>{{eventosCalculados.mayorCapacidad}}</td>
                     </tr>
               </tbody>
             </table>
             <table class="mb-4 table table-dark table-bordered border-primary text-info">
-                  <tbody id="eventosPorVenir"><!-- seccion eventos por venir de tabla -->
+                  <tbody><!-- seccion eventos por venir de tabla -->
                     <tr>
                       <td colspan="3"><h4>Upcoming events statistics by category</h4></td>
                     </tr>
@@ -71,10 +71,17 @@
                       <td>Revenues</td>
                       <td>Percentage of attendance</td>
                     </tr>
+
+                    <tr v-if="imprimirEventosPorVenir" v-for="eventoPorVenir of imprimirEventosPorVenir" class="table-active color_td">
+                      <td>{{eventoPorVenir.category}}</td>
+                      <td>$ {{eventoPorVenir.ganancias}}</td>
+                      <td>{{eventoPorVenir.porcentaje}} %</td>
+                      </tr>
+
                   </tbody>
             </table>
             <table class="table table-dark table-bordered border-primary text-info">
-                  <tbody id="eventosPasados"><!-- seccion eventos pasados de tabla -->
+                  <tbody><!-- seccion eventos pasados de tabla -->
                     <tr>
                       <td colspan="3"><h4>Past Events statistic by category</h4></td>
                     </tr>
@@ -83,6 +90,13 @@
                       <td>Revenues</td>
                       <td>Percentage of attendance</td>
                     </tr>
+
+                    <tr v-if="imprimirEventosPasados" v-for="eventoPasado of imprimirEventosPasados" class="table-active color_td">
+                      <td>{{eventoPasado.category}}</td>
+                      <td>$ {{eventoPasado.ganancias}}</td>
+                      <td>{{eventoPasado.porcentaje}} %</td>
+                      </tr>
+
                   </tbody>
             </table>
           </div>
